# babylm-seqlen

./: .gitignore  .pre-commit-config.yaml  README.md  poetry.toml  process_data.ipynb  pyproject.toml  setup.sh  setup_tokenizer.ipynb  train.py
notebook/: StrictFig_MainBody (1).ipynb  StrictFigs_Revised.ipynb  process_data.ipynb
results/: README.md  all_models_detailed_results.json  all_models_last_checkpoint_detailed.json  all_models_last_checkpoint_simplified.json  all_models_simplified_results.json
results/opt/2048_warmup/reading/: correlations.txt  prediction.jsonl  predictive_power.jsonl  predictive_power_spillover.jsonl
results/opt/256_warmup/reading/: correlations.txt  prediction.jsonl  predictive_power.jsonl  predictive_power_spillover.jsonl  report.txt
results/opt/4096_warmup/reading/: correlations.txt  prediction.jsonl  predictive_power.jsonl  predictive_power_spillover.jsonl  report.txt
results/opt/512_warmup/reading/: correlations.txt  prediction.jsonl  predictive_power.jsonl  predictive_power_spillover.jsonl  report.txt
results/opt/64_warmup/reading/: prediction.jsonl  predictive_power.jsonl  predictive_power_spillover.jsonl
results/opt/8192_warmup/reading/: correlations.txt  prediction.jsonl  predictive_power.jsonl  predictive_power_spillover.jsonl  report.txt
results/opt/opt1024/reading/: correlations.txt  prediction.jsonl  predictive_power.jsonl  predictive_power_spillover.jsonl  report.txt
results/opt/opt128/reading/: prediction.jsonl  predictive_power.jsonl  (+1 more)
scripts/: launch_slurm.wilkes3
src/: train.py
(+939 files in other folders)
