[tool.poetry]
name = "babylm-seqlen"
version = "0.1.0"
description = "BabyLM Submission 2025"
authors = ["rdiehlmartinez <richarddiehl@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.51.3"
datasets = "^3.5.0"
wandb = "^0.19.10"
torch = "^2.7.0"
accelerate = "^1.6.0"
importlib-metadata = "^8.6.1"
deepspeed = "^0.16.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
